hubSide/force-app/main/default/objects/Matrice_cout_equipement__c/Matrice_cout_equipement__c.object-meta.xml
<CustomObject>
    <label>Matrice coût equipement</label>
    <nameField>
        <label>Matrice coût equipement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Matrice coût equipements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>