hubSide/force-app/main/default/objects/Matrice_cout_equipement__c/fields/Batterie_out__c.field-meta.xml
<CustomField>
    <fullName>Batterie_out__c</fullName>
    <label>Batterie out</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>