hubSide/force-app/main/default/objects/Matrice_cout_equipement__c/fields/Chassis_casse_voile__c.field-meta.xml
<CustomField>
    <fullName>Chassis_casse_voile__c</fullName>
    <label>Chassis cassé/voilé</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>