hubSide/force-app/main/default/objects/Matrice_cout_equipement__c/fields/Date_valeur__c.field-meta.xml
<CustomField>
    <fullName>Date_valeur__c</fullName>
    <label>Date valeur</label>
    <type>Date</type>
</CustomField>