hubSide/force-app/main/default/objects/Matrice_cout_equipement__c/fields/Disponible_Echange__c.field-meta.xml
<CustomField>
    <fullName>Disponible_Echange__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disponible pour échange</label>
    <type>Checkbox</type>
</CustomField>