hubSide/force-app/main/default/objects/Matrice_cout_equipement__c/fields/Ecran_casse__c.field-meta.xml
<CustomField>
    <fullName>Ecran_casse__c</fullName>
    <label>Ecran cassé</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>