hubSide/force-app/main/default/objects/Matrice_cout_equipement__c/fields/ExitPrice__c.field-meta.xml
<CustomField>
    <fullName>ExitPrice__c</fullName>
    <label>Prix de sortie équipement</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>