hubSide/force-app/main/default/objects/Matrice_cout_equipement__c/fields/Formule_reparation__c.field-meta.xml
<CustomField>
    <fullName>Formule_reparation__c</fullName>
    <label>Formule réparation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CodeMO1</fullName>
                <default>true</default>
                <label>CodeMO1</label>
            </value>
            <value>
                <fullName>CodeMO2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>