hubSide/force-app/main/default/objects/Matrice_cout_equipement__c/fields/GradeCost_1__c.field-meta.xml
<CustomField>
    <fullName>GradeCost_1__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Coût grade 1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>