hubSide/force-app/main/default/objects/Matrice_cout_equipement__c/fields/Id_externe__c.field-meta.xml
<CustomField>
    <fullName>Id_externe__c</fullName>
    <description>Utilisé pour la jointure avec le catalogue équipement et par les API sortants de Déstockage.</description>
    <externalId>true</externalId>
    <label>Id Externe B-appli Equipement Echange</label>
    <length>25</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>