hubSide/force-app/main/default/objects/Matrice_cout_equipement__c/fields/Marque__c.field-meta.xml
<CustomField>
    <fullName>Marque__c</fullName>
    <label>Marque</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Apple</fullName>
            </value>
            <value>
                <fullName>Canon</fullName>
            </value>
            <value>
                <fullName>DJI</fullName>
            </value>
            <value>
                <fullName>JBL</fullName>
            </value>
            <value>
                <fullName>Nikon</fullName>
            </value>
            <value>
                <fullName>Nintendo</fullName>
            </value>
            <value>
                <fullName>Parrot</fullName>
            </value>
            <value>
                <fullName>Samsung</fullName>
            </value>
            <value>
                <fullName>Sony</fullName>
            </value>
            <value>
                <fullName>Western digital</fullName>
            </value>
            <value>
                <fullName>Xiaomi</fullName>
            </value>
            <value>
                <fullName>Zeiss</fullName>
            </value>
            <value>
                <fullName>Autre</fullName>
            </value>
            <value>
                <fullName>Gopro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>