hubSide/force-app/main/default/objects/Matrice_cout_equipement__c/fields/Modele_equipement__c.field-meta.xml
<CustomField>
    <fullName>Modele_equipement__c</fullName>
    <label>Modèle équipement</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Marque__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Modele_equipement</valueSetName>
    </valueSet>
</CustomField>