hubSide/force-app/main/default/objects/Matrice_cout_equipement__c/fields/PlanCost_2__c.field-meta.xml
<CustomField>
    <fullName>PlanCost_2__c</fullName>
    <label>Coût forfait 2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>