hubSide/force-app/main/default/objects/Matrice_cout_equipement__c/fields/PlanCost_3__c.field-meta.xml
<CustomField>
    <fullName>PlanCost_3__c</fullName>
    <label>Coût forfait 3</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>