hubSide/force-app/main/default/objects/Matrice_cout_equipement__c/fields/PlanName_1__c.field-meta.xml
<CustomField>
    <fullName>PlanName_1__c</fullName>
    <label>Nom forfait 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PlanName</valueSetName>
    </valueSet>
</CustomField>