hubSide/force-app/main/default/objects/Matrice_cout_equipement__c/fields/PlanName_2__c.field-meta.xml
<CustomField>
    <fullName>PlanName_2__c</fullName>
    <label>Nom forfait 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PlanName</valueSetName>
    </valueSet>
</CustomField>