hubSide/force-app/main/default/objects/Matrice_cout_equipement__c/fields/Product2Id__c.field-meta.xml
<CustomField>
    <fullName>Product2Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Catalogue équipement</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Product2.vlocity_ins__RecordTypeName__c</field>
            <operation>equals</operation>
            <value>itemCatalog</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Matrice coût equipements</relationshipLabel>
    <relationshipName>Matrice_co_t_equipements</relationshipName>
    <type>Lookup</type>
</CustomField>