hubSide/force-app/main/default/objects/Matrice_cout_equipement__c/fields/TechGrade__c.field-meta.xml
<CustomField>
    <fullName>TechGrade__c</fullName>
    <label>TechGrade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Neuf</fullName>
            </value>
            <value>
                <fullName>Grade 1</fullName>
            </value>
            <value>
                <fullName>Grade 2</fullName>
            </value>
            <value>
                <fullName>Grade 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>