hubSide/force-app/main/default/objects/Matrice_cout_equipement__c/fields/Valeur_equipement__c.field-meta.xml
<CustomField>
    <fullName>Valeur_equipement__c</fullName>
    <label>Valeur équipement</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>