hubSide/force-app/main/default/objects/Matrice_cout_equipement__c/fields/Valeur_rparationn__c.field-meta.xml
<CustomField>
    <fullName>Valeur_rparationn__c</fullName>
    <formula>CASE ( TEXT (Formule_reparation__c ), &apos;CodeMO1&apos;,Batterie_out__c +  Chassis_casse_voile__c +  Ecran_casse__c +  Vitre_arriere_cassee__c + 70 ,&apos;CodeMO2&apos; , (Batterie_out__c +  Chassis_casse_voile__c +  Ecran_casse__c +  Vitre_arriere_cassee__c ) * 1.1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valeur réparation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>