hubSide/force-app/main/default/objects/Matrice_cout_equipement__c/fields/Vitre_arriere_cassee__c.field-meta.xml
<CustomField>
    <fullName>Vitre_arriere_cassee__c</fullName>
    <label>Vitre arrière cassée</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>