hubSide/force-app/main/default/objects/Matrice_cout_equipement__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Date_valeur__c</columns>
    <columns>Valeur_equipement__c</columns>
    <columns>Valeur_reparation__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>