hubSide/force-app/main/default/objects/Matrice_cout_equipement__c/listViews/Equipement_pour_change.listView-meta.xml
<ListView>
    <fullName>Equipement_pour_change</fullName>
    <columns>Disponible_Echange__c</columns>
    <columns>NAME</columns>
    <columns>Date_valeur__c</columns>
    <columns>Id_externe__c</columns>
    <columns>Valeur_equipement__c</columns>
    <columns>GradeCost_1__c</columns>
    <columns>GradeCost_2__c</columns>
    <columns>GradeCost_3__c</columns>
    <filterScope>Everything</filterScope>
    <label>Equipement pour échange</label>
</ListView>